--- a/tiff2bmpsw.html
+++ b/tiff2bmpsw.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>Load TIFF image using ServiceWorker and emscripten</title>
 <body>
 <script>
 function register() {
@@ -14,7 +15,8 @@ function register() {
       });
 }
 </script>
+<h1>Load TIFF image using ServiceWorker and emscripten</h1>
 <input type="button" onclick="register()" value="Please click">
 <br>
-<img src="lena512color.tiff">
+<img src="cherry_blossom.tif">
 </body>
